--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -1,10 +1,10 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Provider
 metadata:
-  name: provider-template
+  name: provider-cloudian
   annotations:
-    meta.crossplane.io/maintainer: Crossplane Maintainers <info@crossplane.io>
+    meta.crossplane.io/maintainer: Statnett SF <opensource@statnett.no>
     meta.crossplane.io/source: github.com/statnett/provider-cloudian
     meta.crossplane.io/license: Apache-2.0
     meta.crossplane.io/description: |
-      A template that can be used to create Crossplane providers.
+      A Crossplane provider for Cloudian.
