--- a/package/crds/user.cloudian.crossplane.io_groupqualityofservicelimits.yaml
+++ b/package/crds/user.cloudian.crossplane.io_groupqualityofservicelimits.yaml
@@ -155,36 +155,61 @@ spec:
                         type: object
                     type: object
                   hard:
+                    default: {}
                     description: Hard is the hard limit.
                     properties:
-                      inboundKiBsPerMin:
+                      inboundBytesPerMin:
+                        anyOf:
+                        - type: integer
+                        - type: string
                         default: -1
-                        description: InboundKiBsPerMin is the limit for inbound data
+                        description: InboundBytesPerMin is the limit for inbound data
                           per minute in KiB.
-                        format: int64
-                        type: integer
-                      outboundKiBsPerMin:
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: inboundBytesPerMin must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
+                      outboundBytesPerMin:
+                        anyOf:
+                        - type: integer
+                        - type: string
                         default: -1
                         description: OutboundKiBsPerMin is the limit for outbound
                           data per minute in KiB.
-                        format: int64
-                        type: integer
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: outboundBytesPerMin must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
                       requestsPerMin:
                         default: -1
                         description: RequestsPerMin is the limit for number of HTTP
                           requests per minute.
                         format: int64
                         type: integer
+                      storageQuotaBytes:
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        default: -1
+                        description: StorageQuotaBytes is the limit for total stored
+                          data in KiB.
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: storageQuotaBytes must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
                       storageQuotaCount:
                         default: -1
                         description: StorageQuotaCount is the limit for total number
                           of objects.
-                        format: int64
-                        type: integer
-                      storageQuotaKiBs:
-                        default: -1
-                        description: StorageQuotaKiBs is the limit for total stored
-                          data in KiB.
                         format: int64
                         type: integer
                     type: object
@@ -193,36 +218,61 @@ spec:
                       Default region if unspecified.
                     type: string
                   warning:
+                    default: {}
                     description: Warning is the soft limit that triggers a warning.
                     properties:
-                      inboundKiBsPerMin:
+                      inboundBytesPerMin:
+                        anyOf:
+                        - type: integer
+                        - type: string
                         default: -1
-                        description: InboundKiBsPerMin is the limit for inbound data
+                        description: InboundBytesPerMin is the limit for inbound data
                           per minute in KiB.
-                        format: int64
-                        type: integer
-                      outboundKiBsPerMin:
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: inboundBytesPerMin must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
+                      outboundBytesPerMin:
+                        anyOf:
+                        - type: integer
+                        - type: string
                         default: -1
                         description: OutboundKiBsPerMin is the limit for outbound
                           data per minute in KiB.
-                        format: int64
-                        type: integer
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: outboundBytesPerMin must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
                       requestsPerMin:
                         default: -1
                         description: RequestsPerMin is the limit for number of HTTP
                           requests per minute.
                         format: int64
                         type: integer
+                      storageQuotaBytes:
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        default: -1
+                        description: StorageQuotaBytes is the limit for total stored
+                          data in KiB.
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
+                        x-kubernetes-validations:
+                        - message: storageQuotaBytes must be -1, 0, or > 1Ki.
+                          rule: (self == 0 || self == -1 || self == "0" || self ==
+                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                            && quantity(self).isGreaterThan(quantity("1Ki"))
                       storageQuotaCount:
                         default: -1
                         description: StorageQuotaCount is the limit for total number
                           of objects.
-                        format: int64
-                        type: integer
-                      storageQuotaKiBs:
-                        default: -1
-                        description: StorageQuotaKiBs is the limit for total stored
-                          data in KiB.
                         format: int64
                         type: integer
                     type: object
