--- a/package/crds/user.cloudian.crossplane.io_groupqualityofservicelimits.yaml
+++ b/package/crds/user.cloudian.crossplane.io_groupqualityofservicelimits.yaml
@@ -159,59 +159,48 @@ spec:
                     description: Hard is the hard limit.
                     properties:
                       inboundBytesPerMin:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: InboundBytesPerMin is the limit for inbound data
                           per minute in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: inboundBytesPerMin must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: inboundBytesPerMin must be Unlimited, 0, or > 1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       outboundBytesPerMin:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: OutboundKiBsPerMin is the limit for outbound
                           data per minute in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: outboundBytesPerMin must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: outboundBytesPerMin must be Unlimited, 0, or >
+                            1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       requestsPerMin:
-                        default: -1
+                        default: Unlimited
                         description: RequestsPerMin is the limit for number of HTTP
                           requests per minute.
-                        format: int64
-                        type: integer
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                       storageQuotaBytes:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: StorageQuotaBytes is the limit for total stored
                           data in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: storageQuotaBytes must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: storageQuotaBytes must be Unlimited, 0, or > 1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       storageQuotaCount:
-                        default: -1
+                        default: Unlimited
                         description: StorageQuotaCount is the limit for total number
                           of objects.
-                        format: int64
-                        type: integer
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                     type: object
                   region:
                     description: Region in which to apply the quality of service limits.
@@ -222,59 +211,48 @@ spec:
                     description: Warning is the soft limit that triggers a warning.
                     properties:
                       inboundBytesPerMin:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: InboundBytesPerMin is the limit for inbound data
                           per minute in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: inboundBytesPerMin must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: inboundBytesPerMin must be Unlimited, 0, or > 1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       outboundBytesPerMin:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: OutboundKiBsPerMin is the limit for outbound
                           data per minute in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: outboundBytesPerMin must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: outboundBytesPerMin must be Unlimited, 0, or >
+                            1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       requestsPerMin:
-                        default: -1
+                        default: Unlimited
                         description: RequestsPerMin is the limit for number of HTTP
                           requests per minute.
-                        format: int64
-                        type: integer
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                       storageQuotaBytes:
-                        anyOf:
-                        - type: integer
-                        - type: string
-                        default: -1
+                        default: Unlimited
                         description: StorageQuotaBytes is the limit for total stored
                           data in KiB.
-                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
-                        x-kubernetes-int-or-string: true
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                         x-kubernetes-validations:
-                        - message: storageQuotaBytes must be -1, 0, or > 1Ki.
-                          rule: (self == 0 || self == -1 || self == "0" || self ==
-                            "-1" || self >= 1024) || type(self) == string && isQuantity(self)
+                        - message: storageQuotaBytes must be Unlimited, 0, or > 1Ki.
+                          rule: self == "Unlimited" || self == "0" || isQuantity(self)
                             && quantity(self).isGreaterThan(quantity("1Ki"))
                       storageQuotaCount:
-                        default: -1
+                        default: Unlimited
                         description: StorageQuotaCount is the limit for total number
                           of objects.
-                        format: int64
-                        type: integer
+                        pattern: ^(Unlimited|(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGT]i)|[kMGT])?)$
+                        type: string
                     type: object
                 type: object
               managementPolicies:
