--- a/package/crds/user.cloudian.crossplane.io_users.yaml
+++ b/package/crds/user.cloudian.crossplane.io_users.yaml
@@ -34,7 +34,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: A User is an example API type.
+        description: User represents a Cloudian user.
         properties:
           apiVersion:
             description: |-
