--- a/package/crds/user.cloudian.crossplane.io_userqualityofservicelimits.yaml
+++ b/package/crds/user.cloudian.crossplane.io_userqualityofservicelimits.yaml
@@ -79,6 +79,44 @@ spec:
                   groupId:
                     description: GroupID of the quality of service limits.
                     type: string
+                  hard:
+                    description: Hard is the hard limit.
+                    properties:
+                      inboundBytesPerMin:
+                        description: InboundBytesPerMin is the limit for inbound data
+                          per minute in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      outboundBytesPerMin:
+                        description: OutboundKiBsPerMin is the limit for outbound
+                          data per minute in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      requestsPerMin:
+                        description: RequestsPerMin is the limit for number of HTTP
+                          requests per minute.
+                        format: int32
+                        nullable: true
+                        type: integer
+                      storageQuotaBytes:
+                        description: StorageQuotaBytes is the limit for total stored
+                          data in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      storageQuotaCount:
+                        description: StorageQuotaCount is the limit for total number
+                          of objects.
+                        format: int32
+                        nullable: true
+                        type: integer
+                    type: object
+                  region:
+                    description: Region in which to apply the quality of service limits.
+                      Default region if unspecified.
+                    type: string
                   userId:
                     description: UserID of the quality of service limits.
                     type: string
@@ -157,6 +195,40 @@ spec:
                             - IfNotPresent
                             type: string
                         type: object
+                    type: object
+                  warning:
+                    description: Warning is the soft limit that triggers a warning.
+                    properties:
+                      inboundBytesPerMin:
+                        description: InboundBytesPerMin is the limit for inbound data
+                          per minute in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      outboundBytesPerMin:
+                        description: OutboundKiBsPerMin is the limit for outbound
+                          data per minute in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      requestsPerMin:
+                        description: RequestsPerMin is the limit for number of HTTP
+                          requests per minute.
+                        format: int32
+                        nullable: true
+                        type: integer
+                      storageQuotaBytes:
+                        description: StorageQuotaBytes is the limit for total stored
+                          data in bytes.
+                        nullable: true
+                        pattern: ^(0|((0|[1-9][0-9]*)[KMGT]i))$
+                        type: string
+                      storageQuotaCount:
+                        description: StorageQuotaCount is the limit for total number
+                          of objects.
+                        format: int32
+                        nullable: true
+                        type: integer
                     type: object
                 type: object
               managementPolicies:
